test/run-pass/first_line_preprocessor.c
#if 0
#error This block is not active
#endif

int main() {}

