test/compile-fail/error_preprocessor.c
#error Should not compile

int main() {}

